--- a/styles.css
+++ b/styles.css
@@ -850,6 +850,18 @@ footer {
         width: 100%;
         font-size: 17px;
     }
+    .plano-info {
+        list-style: none;
+        padding-left: 0;
+        text-align: left;
+      }
+      
+      .plano-info li::before {
+        content: "✔️"; /* Você pode trocar por outro ícone */
+        color: var(--green-primary);
+        font-size: 1.2em;
+        margin-right: 8px;
+      }
     .last-cta {
         max-width: 768px;
         
