--- a/styles.css
+++ b/styles.css
@@ -587,7 +587,7 @@ footer {
     }
     .scroll-wrapper {
         max-width: 430px;
-        
+        display: flex;
         width: 100%;
     }
     .beneficio {
